<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_action_bar_scrim"
    android:paddingVertical="@dimen/top_action_bar_padding_vertical"
    android:paddingHorizontal="@dimen/top_action_bar_padding_horizontal">

    <ImageView
        android:id="@+id/flash_button"
        android:layout_width="@dimen/button_top_live_camera_size"
        android:layout_height="@dimen/button_top_live_camera_size"
        android:layout_gravity="start"
        android:background="@drawable/button_top_live_camera_bg"
        android:contentDescription="@string/cd_flash_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/camera_flash" />

    <ImageView
        android:id="@+id/notification_bell_button"
        android:layout_width="@dimen/button_top_live_camera_size"
        android:layout_height="@dimen/button_top_live_camera_size"
        android:layout_gravity="start"
        android:layout_toEndOf="@+id/flash_button"
        android:layout_marginLeft="@dimen/button_top_live_camera_margin"
        android:contentDescription="@string/cd_flash_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/camera_bell" />

    <ImageView
        android:id="@+id/static_button"
        android:layout_width="@dimen/button_top_live_camera_size"
        android:layout_height="@dimen/button_top_live_camera_size"
        android:layout_gravity="start"
        android:layout_toStartOf="@id/switch_camera_button"
        android:layout_marginRight="@dimen/button_top_live_camera_margin"
        android:background="@drawable/button_top_live_camera_bg"
        android:contentDescription="@string/cd_close_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/ic_photo" />

    <ImageView
        android:id="@+id/switch_camera_button"
        android:layout_width="@dimen/button_top_live_camera_size"
        android:layout_height="@dimen/button_top_live_camera_size"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_top_live_camera_bg"
        android:contentDescription="@string/cd_settings_button"
        android:padding="@dimen/top_action_button_padding"
        app:srcCompat="@drawable/ic_swap" />

</RelativeLayout>
