<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="qrCodeType"
            type="vn.app.qrcode.data.model.QRCodeType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header_app_bar"
            layout="@layout/layout_header_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_app_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/padding_bottom_in_scroll_view"
                android:paddingHorizontal="@dimen/spacing_padding_vertical_content">

                <include
                    android:id="@+id/layoutIconText"
                    layout="@layout/item_creator"
                    qrCodeType="@{qrCodeType}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--SSID-->
                <EditText
                    android:id="@+id/edit_text_ssid"
                    style="@style/TextNotoStyle.TextLargeBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/bg_radius_edit_text"
                    android:hint="@string/hint_wifi_ssid"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="@integer/max_length_text_name"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutIconText" />

                <TextView
                    android:id="@+id/tv_error_ssid"
                    style="@style/TextErrorStyle.TextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_ssid" />

                <!--Password-->
                <EditText
                    android:id="@+id/edit_text_password"
                    style="@style/TextNotoStyle.TextLargeBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_field_creator"
                    android:background="@drawable/bg_radius_edit_text"
                    android:hint="@string/hint_wifi_password"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="@integer/max_length_text_name"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_error_ssid" />

                <TextView
                    android:id="@+id/tv_error_password"
                    style="@style/TextErrorStyle.TextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

                <RadioGroup
                    android:id="@+id/radioGroupEncryptionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_field_creator"
                    android:checkedButton="@+id/radioWPA"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_error_password">

                    <RadioButton
                        android:id="@+id/radioWPA"
                        style="@style/RadioButtonWifi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/create_wifi_wpa" />

                    <RadioButton
                        android:id="@+id/radioWEP"
                        style="@style/RadioButtonWifi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/_minus1sdp"
                        android:text="@string/create_wifi_wep" />

                    <RadioButton
                        android:id="@+id/radioNone"
                        style="@style/RadioButtonWifi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/create_wifi_none" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreate"
                    style="@style/ButtonCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:paddingHorizontal="@dimen/padding_horizontal_create"
                    android:text="@string/btn_create"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupEncryptionType" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>